--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
         <link rel="shortcut icon" href="favicon.ico">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="css/main.css" />
-		<noscript><link rel="stylesheet" href="css/noscript.css" /></noscript>
+		<link rel="stylesheet" href="main.css" />
+		<noscript><link rel="stylesheet" href="noscript.css" /></noscript>
 	</head>
 	<body onselectstart="return false" oncontextmenu=self.event.returnValue=false> 
 
@@ -53,11 +53,11 @@
 			<div id="bg"></div>
 
 		<!-- Scripts -->
-			<script src="js/jquery.min.js" ></script>
-			<script src="js/skel.min.js" ></script>
-			<script src="js/util.js" ></script>
-			<script src="js/main.js" ></script>
-            <script src="js/su.js"></script>
+			<script src="jquery.min.js" ></script>
+			<script src="skel.min.js" ></script>
+			<script src="util.js" ></script>
+			<script src="main.js" ></script>
+            <script src="su.js"></script>
             <script type="text/javascript">jQuery(document).ready(function($){
                $('body').wpSuperSnow({
     flakes: ['https://cdn.mom1.cn/1/007.png', 'https://cdn.mom1.cn/1//006.png', 'https://cdn.mom1.cn/1//004.png', 'https://cdn.mom1.cn/1/002.png', 'https://cdn.mom1.cn/1/001.png', 'https://cdn.mom1.cn/1/003.png', 'https://cdn.mom1.cn/1/002.png', 'https://cdn.mom1.cn/1/001.png', ],
