--- a/index.html
+++ b/index.html
@@ -4,43 +4,7 @@
 		<title>方舟69服☆GTA5西瓜镇69yxw.github.io</title>
 		<meta name="keywords" content="方舟69服☆GTA5西瓜镇">
         <meta name="description" content="方舟69服☆GTA5西瓜镇">
-        <link rel="shortcut icon" href="favicon.ico">
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="main.css" />
-		<noscript><link rel="stylesheet" href="noscript.css" /></noscript>
-	</head>
-	<body onselectstart="return false" oncontextmenu=self.event.returnValue=false> 
-
-		<!-- Wrapper -->
-			<div id="wrapper">
-
-				<!-- Header -->
-					<header id="header">
-						<div class="logo">
-
-							<font size="8">69</font>						</div>
-						<div class="content">
-							<div class="inner">
-								<h1>方舟69服☆GTA5西瓜镇玩家群 </h1>
-								<p>69yxw.github.io</p>
-							</div>
-						</div>
-						<nav>
-							<ul>
-								<li><a href="http://69yxw.github.io/" target="_blank"><i class="fa fa-home"></i>首页</a></li>
-								<li><a href="http://69yxw.github.io/" target="_blank"><i class="fa fa-qq"></i>方舟</a></li>
-								<li><a href="http://69yxw.github.io/"target="_blank"><i class="fa fa-weibo"></i>GTA5</a></li>
-								<li><a href="https://github.com/" target="_blank"><i class="fa fa-github"></i>Rust</a></li>
-								<li><a href="http://69yxw.github.io/" target="_blank"><i class="fa fa-heart-o"></i>69论坛</a></li>
-								<li><a href="https://jq.qq.com/?_wv=1027&k=5eUkXJC"target="_blank"><i class="fa fa-comments-o"></i>69游戏群</a></li>
-<!DOCTYPE HTML>
-<html>
-	<head>
-		<title>方舟69服☆GTA5西瓜镇69yxw.github.io</title>
-		<meta name="keywords" content="方舟69服☆GTA5西瓜镇">
-        <meta name="description" content="方舟69服☆GTA5西瓜镇">
-        <link rel="shortcut icon" href="favicon.ico">
+        <link rel="shortcut icon" href="http://host32588f425.001019.badianyun.com/favicon.ico">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="http://host32588f425.001019.badianyun.com/main.css" />
@@ -106,43 +70,5 @@
 });
 </script>
 	<audio id="mom" src="http://host32588f425.001019.badianyun.com/1.mp3" autoplay="autoplay" loop="-1" preload="auto" type="audio/mp3"></audio>
-	</body>
-</html>
-
-
-								
-							</ul>
-						</nav>
-					</header>
-
-				<!-- Footer -->
-					<footer id="footer">
-						<p class="copyright">©2018 <a href="http://69yxw.github.io/" target="_blank">69游戏论坛</a> 版权所有</p>
-
-					</footer>
-
-			</div>
-
-		<!-- BG -->
-			<div id="bg"></div>
-
-		<!-- Scripts -->
-			<script src="jquery.min.js" ></script>
-			<script src="skel.min.js" ></script>
-			<script src="util.js" ></script>
-			<script src="main.js" ></script>
-            <script src="su.js"></script>
-            <script type="text/javascript">jQuery(document).ready(function($){
-               $('body').wpSuperSnow({
-    flakes: ['https://cdn.mom1.cn/1/007.png', 'https://cdn.mom1.cn/1//006.png', 'https://cdn.mom1.cn/1//004.png', 'https://cdn.mom1.cn/1/002.png', 'https://cdn.mom1.cn/1/001.png', 'https://cdn.mom1.cn/1/003.png', 'https://cdn.mom1.cn/1/002.png', 'https://cdn.mom1.cn/1/001.png', ],
-    totalFlakes: '90',
-    zIndex: '999999',
-    maxSize: '30',
-    maxDuration: '20',
-    useFlakeTrans: false
-});
-});
-</script>
-	<audio id="mom" src="1.mp3" autoplay="autoplay" loop="-1" preload="auto" type="audio/mp3"></audio>
 	</body>
 </html>
