--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
         <link rel="shortcut icon" href="http://host32588f425.001019.badianyun.com/favicon.ico">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="http://host32588f425.001019.badianyun.com/main.css" />
-		<noscript><link rel="stylesheet" href="http://host32588f425.001019.badianyun.com/noscript.css" /></noscript>
+		<link rel="stylesheet" href="main.css" />
+		<noscript><link rel="stylesheet" href="noscript.css" /></noscript>
 	</head>
 	<body onselectstart="return false" oncontextmenu=self.event.returnValue=false> 
 
