--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <script src="http://host32588f425.001019.badianyun.com/su.js"></script>
             <script type="text/javascript">jQuery(document).ready(function($){
                $('body').wpSuperSnow({
-    flakes: ['http://demo.sc.chinaz.com/Files/pic/icons/5125/1.png', 'http://demo.sc.chinaz.com/Files/pic/icons/5125/5.png', 'http://demo.sc.chinaz.com/Files/pic/icons/5125/4.png', 'http://demo.sc.chinaz.com/Files/pic/icons/5125/2.png', ],
+    flakes: ['http://demo.sc.chinaz.com/Files/pic/icons/6322/k5.png', ],
     totalFlakes: '90',
     zIndex: '999999',
     maxSize: '30',
