--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>方舟69服☆GTA5西瓜镇69yxw.github.io</title>
+		<title>方舟69服☆GTA5西瓜镇</title>
 		<meta name="keywords" content="方舟69服☆GTA5西瓜镇">
         <meta name="description" content="方舟69服☆GTA5西瓜镇">
         <link rel="shortcut icon" href="http://host32588f425.001019.badianyun.com/favicon.ico">
@@ -22,7 +22,7 @@
 							<font size="8">69</font>						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>方舟69服☆GTA5西瓜镇玩家群-- </h1>
+								<h1>方舟69服☆GTA5西瓜镇玩家群</h1>
 								<p>69yxw.github.io</p>
 							</div>
 						</div>
