--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 							<ul>
 								<li><a href="http://69yxw.github.io/" target="_blank"><i class="fa fa-home"></i>首页</a></li>
 								<li><a href="https://jq.qq.com/?_wv=1027&k=T5msRbMv" target="_blank"><i class="fa fa-qq"></i>方舟</a></li>
-								<li><a href="https://jq.qq.com/?_wv=1027&k=T5msRbMv"target="_blank"><i class="fa fa-weibo"></i>GTA5</a></li>
-								<li><a href="https://jq.qq.com/?_wv=1027&k=T5msRbMv" target="_blank"><i class="fa fa-github"></i>Rust</a></li>
+								<li><a href="https://jq.qq.com/?_wv=1027&k=T5msRbMv"target="_blank"><i class="fa fa-qq"></i>GTA5</a></li>
+								<li><a href="https://jq.qq.com/?_wv=1027&k=T5msRbMv" target="_blank"><i class="fa fa-qq"></i>Rust</a></li>
 								<li><a href="https://jq.qq.com/?_wv=1027&k=T5msRbMv" target="_blank"><i class="fa fa-heart-o"></i>游戏下载</a></li>
 								<li><a href="https://jq.qq.com/?_wv=1027&k=T5msRbMv"target="_blank"><i class="fa fa-comments-o"></i>69游戏群</a></li>
 
