--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 					<header id="header">
 						<div class="logo">
 
-							<font size="20">69</font>						</div>
+							<font size="8">☆69☆</font>						</div>
 						<div class="content">
 							<div class="inner">
 								<h1>方舟69服☆GTA5西瓜镇玩家群</h1>
